--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,18 +29,14 @@ dist.jar=${dist.dir}/JDD.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.hackystatlogger.lib.jar=C:\\Users\\ian\\lib\\hackystatlogger.lib.jar
-file.reference.hackystatuserhome.lib.jar=C:\\Users\\ian\\lib\\hackystatuserhome.lib.jar
-file.reference.jmotif.lib-0.97.jar=C:\\Users\\ian\\lib\\jmotif.lib-0.97.jar
-file.reference.jsi-1.0b8.jar=C:\\Users\\ian\\lib\\jsi-1.0b8.jar
+file.reference.commons-cli-1.2.jar=C:\\Users\\ian\\github\\lib\\commons-cli-1.2.jar
+file.reference.jmotif.lib-0.97.jar=C:\\Users\\ian\\github\\lib\\jmotif.lib-0.97.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.weka.classpath}:\
-    ${file.reference.hackystatlogger.lib.jar}:\
-    ${file.reference.hackystatuserhome.lib.jar}:\
-    ${file.reference.jmotif.lib-0.97.jar}:\
-    ${file.reference.jsi-1.0b8.jar}
+    ${file.reference.commons-cli-1.2.jar}:\
+    ${file.reference.jmotif.lib-0.97.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -64,7 +60,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=discord.Discord
+main.class=Test.Test
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
